tests/NormalTests/paczka1/small_fuzzy/63276781.err
Error in line 1: UWs5kYKGAE S175 94,0
Error in line 4: xyqk96AhjL S175 66,7
Error in line 6: xyqk96AhjL A45 14,5
Error in line 7: xyqk96AhjL A85 28,6
